fix layout issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -255,9 +255,7 @@ h1 {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: space-between;
-  padding: 0 20px;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .container-full {
